# 42_so_long

./: .gitignore  CMakeLists.txt  Makefile  readme.md
app/: so_long.c
include/: so_long.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_includes_char.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_print_hex_memory.c  ft_print_hex_nbr.c  ft_print_unsigned_fd.c  ft_printf.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strfull.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  (+10 more)
maps/: map1.ber
maps/invalid_maps/: map_invalid.txt  map_invalid_char1.ber  map_invalid_char2.ber  map_invalid_missing_char1.ber  map_invalid_missing_char2.ber  map_invalid_missing_char3.ber  map_invalid_rectangle1.ber  map_invalid_rectangle2.ber  map_invalid_rectangle3.ber  map_invalid_walls1.ber  map_invalid_walls2.ber  map_invalid_walls3.ber  map_invalid_walls4.ber
src/: handle_key_events.c  map_handlers.c  memory_management.c  read_map.c  validate_map.c
